# avanzai_open

./: .gitignore  README.md  docker-compose.yml
avanzai-backend/: .env.example  .gitignore  Dockerfile  analysis_tools.py  available_fields.json  az3_api_03242025.py  az_data.py  az_universe_01252025.csv  az_universe_01262025.db  az_universe_05012025.csv  fundamentals_04282025.parquet  macro_indicators.json  pyproject.toml  requirements3.txt  secmaster.db  spx500_secmaster.db
avanzai-backend/example_notebooks/: avanzai_screener.ipynb  az_triage_agent_example.ipynb
avanzai-frontend/: .env.example  DB-CONNECTION-MANAGEMENT.md  ai_sdk.md  allie.db  create_tables.py  env.mjs  middleware.ts  package-lock.json  package.json  repomix-output.txt  repomix-output.xml  test_db.py  vercel_chatbot.md  virattt-ai-financial-agent.txt
avanzai-frontend/app/: layout.tsx
avanzai-frontend/backups/: layout.tsx
avanzai-frontend/components/: app-sidebar.tsx  artifact-close-button.tsx  artifact.tsx  auth-provider.tsx  chat-header.tsx  chat.tsx  client-only.tsx  create-artifact.tsx  current-user.tsx  data-stream-handler.tsx  document-preview.tsx  document-preview.tsx```  icons.tsx  message.tsx  messages-reasoning.tsx  messages.tsx  nav-main.tsx  providers.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  simple-overview.tsx  tabbed-sheet-editor.tsx  tabbed-sheet-editor.tsx```  template-sheet-view.tsx
avanzai-frontend/config/: navigation.ts
avanzai-frontend/drizzle/: 0000_sqlite_init.sql
avanzai-frontend/hooks/: use-artifact.ts  use-parquet-data.ts
avanzai-frontend/lib/: api.ts  (+6 more)
(+97 files in other folders)
